--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  
   http: 0.13.3
   cupertino_icons: ^1.0.2
   google_fonts: 3.0.1
@@ -48,6 +49,7 @@ dependencies:
   carousel_slider: 4.1.1
   image_picker: ^0.8.5+3
   dio: 4.0.6
+  clean_dialog: ^0.0.16
 
    # Firebase
   firebase_core: ^2.12.0
@@ -85,6 +87,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
     # - images/a_dot_burr.jpeg
     # - images/a_dot_ham.jpeg
